# pourquoifaire

./: .gitignore  README.md  pyproject.toml  seed_test_data.py  todo_llm.py
how_and_why/: api.py  cli.py  database.py  export.py  vector_index.py
pourquoifaire/: api.py  cli.py  database.py  display.py  errors.py  models.py  tui_app.py
