[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pourquoifaire"
version = "0.1.0"
description = "A Python package pourquoifaire"
authors = [
    {name = "Etienne"},
]
dependencies = [
    "rich",
    "textual",
    "click",
    "sqlmodel",
    "ollama",
    "sqlite-vec",
]

[tool.setuptools.packages.find]
exclude = ["data*"]

[project.scripts]
pqf = "pourquoifaire.cli:cli"
pourquoifaire = "pourquoifaire.cli:cli"
pqf-tui = "pourquoifaire.tui_app:run"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]